--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -27,7 +27,7 @@
     <script src='./lib/js/fhir-client-cerner-additions-1.0.0.js'></script>
     <script>
       FHIR.oauth2.authorize({
-        'client_id': '<enter your client id here>',
+        'client_id': '54bd7af0-e267-4219-86fd-efd129e586e1',
         'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
       });
     </script>
